--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,73 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Poppins, sans-serif;
+}
+
 body {
+    background-color: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+}
+
+.modal-box {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.playground-box {
+    display: grid;
+    grid-template-columns: 50% 0% 50%;
+    border: 2px solid black;
+    width: 60%;
+    height: 60%;
+}
+
+.player,
+.player1 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 3.5rem;
+    text-transform: uppercase;
     background-color: red;
 }
+
+.player-heading {
+    font-weight: 400;
+    font-size: 2.7rem;
+    padding-top: 2rem;
+    
+}
+
+.score-box {
+    background-color: #c7365f;
+    padding: 1.5rem 3rem;
+    border: none;
+    border-radius: 0.6rem;
+    margin-top: 3.8rem;
+    width: 15%;
+    color: white;
+    text-align: center;
+    
+}
+
+.player-current-score {
+    line-height: 1.7rem;
+}
+
+.middle-section {
+    margin-top: 2rem;
+    position: relative;
+}
+
+.new-game {
+    position: absolute;
+    top: 5%;
+    left: -%;
+    padding: 0.2rem 2rem;
+}
+
