--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,9 @@
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
+    text-transform: uppercase;
 }
 
-body {
-    background-color: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
-}
 
 .modal-box {
     display: flex;
@@ -18,10 +16,14 @@ body {
 
 .playground-box {
     display: grid;
-    grid-template-columns: 50% 0% 50%;
-    border: 2px solid black;
+    grid-template-columns: 50% 50%;
     width: 60%;
     height: 60%;
+    border: none;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.5);
+
 }
 
 .player,
@@ -32,7 +34,6 @@ body {
     flex-direction: column;
     align-items: center;
     row-gap: 3.5rem;
-    text-transform: uppercase;
     background-color: red;
 }
 
@@ -59,23 +60,50 @@ body {
     line-height: 1.7rem;
 }
 
-.middle-section {
-    margin-top: 2rem;
-    position: relative;
-}
+
 
 .new-game {
-    position: absolute;   
+    position: absolute;
+    right: 46%;
+    top: 25%;
+    width: 120px;
+    padding: 12px;
+    border-radius: 6px; 
+    border: none;
+    background-color: rgba(211, 211, 211, 0.651)
 }
 
 .new-game1 {
     position: absolute;
-    top: 20%;
+    top: 60%;
+    right: 44.5%;
+    width: 150px;
+    padding: 12px;
+    border-radius: 20px; 
+    border: none;
+    background-color: rgba(211, 211, 211, 0.651) 
 }
 
 .new-game2 {
     position: absolute;
-    top: 50%;
+    top: 68%;
+    right: 46%;
+    width: 110px;
+    padding: 12px;
+    border-radius: 20px; 
+    border: none;
+    background-color: rgba(211, 211, 211, 0.651) 
+}
+
+.info {
+    position: absolute;
+    top: 22%;
+    right: 22%;
+    width: 2.6rem;
+    height: 3rem;
+    border: none;
+    border-radius: 2rem;
+    background-color: rgba(211, 211, 211, 0.651)
 }
 
 
